# ChangeLog for x11-libs/motif-config
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/motif-config/Attic/ChangeLog,v 1.28 2008/02/12 14:18:24 ulm Exp $

*motif-config-0.10-r2 (12 Feb 2008)

  12 Feb 2008; Ulrich Mueller <ulm@gentoo.org> files/motif-config-0.10,
  -files/bindings.tbz2, -files/bitmaps.tbz2, +motif-config-0.10-r2.ebuild:
  Install bindings and bitmaps, move their tarballs to mirrors. Add MOTIF
  to LICENSE. Update dependencies. Ebuild by Jakub Moc <jakub@gentoo.org>,
  bug 91951. Fix version number in motif-config script.

  27 Sep 2007; Jeroen Roovers <jer@gentoo.org> files/motif-config-0.9,
  files/motif-config-0.10:
  Determine which executables should go into /usr/bin.

*motif-config-0.10-r1 (26 Sep 2007)
*motif-config-0.9-r1 (26 Sep 2007)

  26 Sep 2007; Jeroen Roovers <jer@gentoo.org> files/motif-config-0.9,
  files/motif-config-0.10, -motif-config-0.9.ebuild,
  +motif-config-0.9-r1.ebuild, -motif-config-0.10.ebuild,
  +motif-config-0.10-r1.ebuild:
  Don't mess with /usr/bin.

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove lanius from metadata.xml as he's retired.

  09 Jul 2006; Javier Villavicencio <the_paya@gentoo.org>
  motif-config-0.10.ebuild:
  Added ~x86-fbsd keyword.

  20 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> ChangeLog:
  Fix digests

*motif-config-0.10 (20 Feb 2006)

  20 Feb 2006; Heinrich Wendel <lanius@gentoo.org> -files/motif-config-0.6,
  -files/motif-config-0.7, -files/motif-config-0.8,
  +files/motif-config-0.10, -motif-config-0.6.ebuild,
  -motif-config-0.7.ebuild, -motif-config-0.8.ebuild,
  +motif-config-0.10.ebuild:
  bug #123226; add proper return codes; fix previsouly broken motif installations

  16 Feb 2006; Fabian Groffen <grobian@gentoo.org> motif-config-0.9.ebuild:
  Marked ppc-macos stable (bug #114234)

  25 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org>
  motif-config-0.9.ebuild: