@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/motif-config/Attic/motif-config-0.10-r2.ebuild,v 1.1 2008/02/12 14:18:24 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/motif-config/Attic/motif-config-0.10-r2.ebuild,v 1.2 2008/02/13 08:26:39 opfer Exp $
 
 inherit multilib
 
@@ -11,7 +11,7 @@ SRC_URI="mirror://gentoo/${P}-bindings.tar.bz2
 
 LICENSE="GPL-2 MOTIF"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 # These blockers are here for transition to a single, non-slotted
