@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/openmotif
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/Attic/ChangeLog,v 1.145 2008/01/05 21:07:43 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/Attic/ChangeLog,v 1.146 2008/02/13 08:23:12 opfer Exp $
+
+  13 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
+  openmotif-2.3.0.ebuild:
+  stable x86, bug 204265
 
   05 Jan 2008; Mark Loeser <halcy0n@gentoo.org> openmotif-2.3.0.ebuild:
   Make openmotif actually respect USE flags when building (thanks to Jozef
