@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/motif-config
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/motif-config/Attic/ChangeLog,v 1.28 2008/02/12 14:18:24 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/motif-config/Attic/ChangeLog,v 1.29 2008/02/13 08:26:39 opfer Exp $
+
+  13 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
+  motif-config-0.10-r2.ebuild:
+  stable x86, bug 204265
 
 *motif-config-0.10-r2 (12 Feb 2008)
 
